--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,15 @@ dependencies {
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	//oauth 추가
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	//spring security (oauth 위해)
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// 타임리프에서 스프링시큐리티의 문법이나 형식을 지원하는 확장팩 라이브러리
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 }
 
 tasks.named('test') {
