--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.servlet.multipart.max-request-size=100MB
 
 #스프링 프로필
 spring.profiles.active=local
+spring.profiles.include=oauth
 
 #mysql datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/hello?serverTimezone=UTC&characterEncoding=UTF-8
@@ -26,14 +27,6 @@ mybatis.type-aliases-package=hello.board.domain
 # Mybatis 에서 실행하는 쿼리 로그 확인
 logging.level.hello.board.domain.repository.mybatis=trace
 
-#oauth2 for google
-spring.security.oauth2.client.registeration.google.client-id=803783674852-civo6qlhuhkjidt5hjdg4eend9i5pa42.apps.googleusercontent.com
-spring.security.oauth2.client.registeration.google.client-secret=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
-
-# 기본값 openid, profile, email
-# openid scope 가 있으면 Open id provider 로 인식하고,
-#   Open provider 인 서비스(구글) 과 그렇지 않은 서비스(네이버/카카오)로 OAuth2Service 를 분리해야 한다고 함
-spring.security.oauth2.client.registeration.google.scope=profile,email
 
 
 
