--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -14,11 +14,11 @@
 
 
 # == bean Validation ==
-NotBlank={0}을(를) 입력해주세요.
+NotBlank=내용을 입력해주세요.
 
-Size={0}은(는) 최대 {1}자 까지 허용합니다.
+Size=최대 {1}자 까지 허용합니다.
 # 속성값은 알파벳순으로 처리, Max 가 Min 보다 먼저처리.
-Size.password={0}는 최소 {2}자 부터 최대 {1}자 까지 허용합니다.
+Size.password=최소 {2}자 부터 최대 {1}자 까지 허용합니다.
 
 
 # spring-security error 메시지
