--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,7 +7,7 @@ spring.servlet.multipart.max-request-size=100MB
 
 #스프링 프로필
 spring.profiles.active=test
-
+spring.profiles.include=oauth
 #mysql datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/hello?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
