--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -21,6 +21,11 @@ Size=최대 {1}자 까지 허용합니다.
 Size.password=최소 {2}자 부터 최대 {1}자 까지 허용합니다.
 
 
+
+# custom message
+Unauthorized.category = 작성이 허용되지 않은 카테고리 입니다.
+
+
 # spring-security error 메시지
 # spring-security-core-x.x.x.jar 의 resources 에서 참조
 AbstractAccessDecisionManager.accessDenied = 접근이 거부되었습니다.
