--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,24 @@
-# 배포용 (타임리프 컨트롤러에서 반환시 맨앞 / 제거)
 
-# 아마존 ElasticBeansTalk 기본 포트
-server.port=5000
+#스프링 프로필
+
+# local DB + local oauth + local storage
+#spring.profiles.include=local, oauth-local
+
+# local DB + local oauth + S3
+#spring.profiles.include=local, oauth-local, amazon-s3
+
+# amazon EB + EB oauth + S3
+spring.profiles.include=amazon-eb, oauth-eb, amazon-s3
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
-
 
 # errors.properties 기본사용
 spring.messages.basename=errors
 
 # multipart 파일전송 용량제한
-spring.servlet.multipart.max-file-size=15MB
-spring.servlet.multipart.max-request-size=100MB
-
-#스프링 프로필
-spring.profiles.active=local
-spring.profiles.include=oauth
-
-#mysql datasource
-spring.datasource.url=jdbc:mysql://awseb-e-6qcdmkzptp-stack-awsebrdsdatabase-imkuipj5qrja.ctwg5rimhlf2.ap-northeast-1.rds.amazonaws.com:3306  /hello?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=spiaminto
-spring.datasource.password=15975346
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
 
 # mybatis 설정
 
@@ -34,6 +30,9 @@ mybatis.type-aliases-package=hello.board.domain
 
 # Mybatis 에서 실행하는 쿼리 로그 확인
 logging.level.hello.board.domain.repository.mybatis=trace
+
+# amazon s3 연결
+
 
 
 
