--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 #spring.profiles.include=local, oauth-local
 
 # local DB + local oauth + S3
-#spring.profiles.include=local, oauth-local, amazon-s3
+spring.profiles.include=local, oauth-local, amazon-s3
 
 # amazon EB + EB oauth + S3
-spring.profiles.include=amazon-eb, oauth-eb, amazon-s3
+#spring.profiles.include=amazon-eb, oauth-eb, amazon-s3
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
