--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,18 @@
 #스프링 프로필
 
 # local DB + local oauth + local storage
-#spring.profiles.include=local, oauth-local
+#spring.profiles.active=local
 
 # local DB + local oauth + S3
-spring.profiles.include=local, oauth-local, amazon-s3
+spring.profiles.active=localS3
 
 # amazon EB + EB oauth + S3
-#spring.profiles.include=amazon-eb, oauth-eb, amazon-s3
+#spring.profiles.active=deploy
+
+# 스프링 프로필 그룹
+spring.profiles.group.local=local, oauth-local
+spring.profiles.group.localS3=local, oauth-local, amazon-s3
+spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
