--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,19 @@
 #스프링 프로필
 
 # local DB + local oauth + local storage
-#spring.profiles.active=local
+spring.profiles.active=local
 
 # local DB + local oauth + S3
-spring.profiles.active=localS3
+#spring.profiles.active=localS3
 
 # amazon EB + EB oauth + S3
-#spring.profiles.active=deploy
+#spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
-spring.profiles.group.local=local, oauth-local
+# local 에 amazon-s3 를 사용하지 않지만, 빼면 빈 생성이 안됨...
+spring.profiles.group.local=local, oauth-local, amazon-s3
 spring.profiles.group.localS3=local, oauth-local, amazon-s3
-spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
+spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
