--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,18 +1,29 @@
+
+#스프링 프로필
+
+# local DB + local oauth + local storage
+#spring.profiles.active=local
+
+# local DB + local oauth + S3
+#spring.profiles.active=local
+
+# amazon EB + EB oauth + S3
+spring.profiles.active=deploy
+
+# 스프링 프로필 그룹
+#spring.profiles.group.local=local, oauth-local
+#spring.profiles.group.localS3=local, oauth-local, amazon-s3
+#spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
+
+#spring.mvc.static-path-pattern=/static/**
+spring.thymeleaf.prefix=classpath:/templates/
+
 # errors.properties 기본사용
 spring.messages.basename=errors
 
 # multipart 파일전송 용량제한
-spring.servlet.multipart.max-file-size=15MB
-spring.servlet.multipart.max-request-size=100MB
-
-#스프링 프로필
-spring.profiles.active=test
-spring.profiles.include=oauth
-#mysql datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/hello?serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=1273
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
 
 # mybatis 설정
 
@@ -24,3 +35,14 @@ mybatis.type-aliases-package=hello.board.domain
 
 # Mybatis 에서 실행하는 쿼리 로그 확인
 logging.level.hello.board.domain.repository.mybatis=trace
+
+# amazon s3 연결
+
+
+
+
+
+
+
+
+
