--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=hello.board.domain
 
 # Mybatis 에서 실행하는 쿼리 로그 확인
-logging.level.hello.board.domain.repository.mybatis=trace
+logging.level.hello.board.repository.mybatis=trace
 
 # amazon s3 연결
 
