--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,15 +5,15 @@
 #spring.profiles.active=local
 
 # local DB + local oauth + S3
-#spring.profiles.active=local
+spring.profiles.active=localS3
 
 # amazon EB + EB oauth + S3
-spring.profiles.active=deploy
+#spring.profiles.active=deploy
 
 # 스프링 프로필 그룹
-#spring.profiles.group.local=local, oauth-local
-#spring.profiles.group.localS3=local, oauth-local, amazon-s3
-#spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
+spring.profiles.group.local=local, oauth-local
+spring.profiles.group.localS3=local, oauth-local, amazon-s3
+spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
@@ -34,7 +34,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=hello.board.domain
 
 # Mybatis 에서 실행하는 쿼리 로그 확인
-logging.level.hello.board.domain.repository.mybatis=trace
+logging.level.hello.board.repository.mybatis=trace
 
 # amazon s3 연결
 
