--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 #스프링 프로필
 
 # local DB + local oauth + local storage
-spring.profiles.active=local
+#spring.profiles.active=local
 
 # local DB + local oauth + S3
-#spring.profiles.active=localS3
+spring.profiles.active=localS3
 
 # amazon EB + EB oauth + S3
 #spring.profiles.active=deployS3
@@ -37,7 +37,6 @@ mybatis.type-aliases-package=hello.board.domain
 # Mybatis 에서 실행하는 쿼리 로그 확인
 logging.level.hello.board.repository.mybatis=trace
 
-# amazon s3 연결
 
 
 
