--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,10 +5,10 @@
 #spring.profiles.active=local
 
 # local DB + local oauth + S3
-spring.profiles.active=localS3
+#spring.profiles.active=localS3
 
 # amazon EB + EB oauth + S3
-#spring.profiles.active=deploy
+spring.profiles.active=deploy
 
 # 스프링 프로필 그룹
 spring.profiles.group.local=local, oauth-local
