--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,12 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=hello.board.domain
 
 # Mybatis 에서 실행하는 쿼리 로그 확인
-logging.level.hello.board.repository.mybatis=trace
+#logging.level.hello.board.repository.mybatis=warn
+
+#logback logback-spring.xml 자동인식
+#logging.config=classpath:logback/logback-local.xml
+
+
 
 
 
