--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.profiles.active=localS3
 # 스프링 프로필 그룹
 # local 에 amazon-s3 를 사용하지 않지만, 빼면 빈 생성이 안됨...
 spring.profiles.group.local=local, oauth-local, amazon-s3
-spring.profiles.group.localS3=local, oauth-local, amazon-s3
-spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3
+spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local
+spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
@@ -30,15 +30,15 @@ spring.servlet.multipart.max-request-size=50MB
 
 # snake case to camel case 변환
 mybatis.configuration.map-underscore-to-camel-case=true
-
 #반환타입
 mybatis.type-aliases-package=hello.board.domain
-
 # Mybatis 에서 실행하는 쿼리 로그 확인
-#logging.level.hello.board.repository.mybatis=warn
+#logging.level.hello.board.repository.mybatis=trace
 
-#logback logback-spring.xml 자동인식
-#logging.config=classpath:logback/logback-local.xml
+# log4jdbc 설정
+log4jdbc.dump.sql.maxlinelength=0
+
+
 
 
 
