--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 
 #스프링 프로필
 
-# local DB + local oauth + local storage
+# 로컬 + 로컬디스크
 #spring.profiles.active=local
 
-# local DB + local oauth + S3
-spring.profiles.active=localS3
+# 로컬 + S3
+#spring.profiles.active=localS3
 
-# amazon EB + EB oauth + S3
-#spring.profiles.active=deployS3
+# EB 배포
+spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
 # local 에 amazon-s3 를 사용하지 않지만, 빼면 빈 생성이 안됨...
@@ -22,7 +22,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 # errors.properties 기본사용
 spring.messages.basename=errors
 
-# multipart 파일전송 용량제한
+# multipart 파일전송 용량제한, 배포도 사용
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
@@ -36,7 +36,7 @@ mybatis.type-aliases-package=hello.board.domain
 #logging.level.hello.board.repository.mybatis=trace
 
 # log4jdbc 설정
-log4jdbc.dump.sql.maxlinelength=0
+#log4jdbc.dump.sql.maxlinelength=0
 
 
 
