--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,12 @@
 #spring.profiles.active=local
 
 # 로컬 + S3
-#spring.profiles.active=localS3
+spring.profiles.active=localS3
 
 # EB 배포
-spring.profiles.active=deployS3
+#spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
-# local 에 amazon-s3 를 사용하지 않지만, 빼면 빈 생성이 안됨...
 spring.profiles.group.local=local, oauth-local, amazon-s3
 spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local
 spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
