--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 #spring.profiles.active=local
 
 # 로컬 + S3
-spring.profiles.active=localS3
+#spring.profiles.active=localS3
 
 # EB 배포
-#spring.profiles.active=deployS3
+spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
 spring.profiles.group.local=local, oauth-local, amazon-s3
