--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@
 spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
-spring.profiles.group.local=local, oauth-local, amazon-s3
+spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
 spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local
 spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
 
