--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,19 +1,22 @@
 
 #스프링 프로필
 
-# local DB + local oauth + local storage
+# 로컬 + 로컬디스크
 #spring.profiles.active=local
 
-# local DB + local oauth + S3
+# 로컬 + S3
 spring.profiles.active=localS3
 
-# amazon EB + EB oauth + S3
-#spring.profiles.active=deploy
+# EB 배포
+#spring.profiles.active=deployS3
+
+# 테스트
 
 # 스프링 프로필 그룹
-spring.profiles.group.local=local, oauth-local
-spring.profiles.group.localS3=local, oauth-local, amazon-s3
-spring.profiles.group.deploy=amazon-eb, oauth-eb, amazon-s3
+spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
+spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
+spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
+
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
@@ -21,7 +24,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 # errors.properties 기본사용
 spring.messages.basename=errors
 
-# multipart 파일전송 용량제한
+# multipart 파일전송 용량제한, 배포도 사용
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
@@ -29,14 +32,18 @@ spring.servlet.multipart.max-request-size=50MB
 
 # snake case to camel case 변환
 mybatis.configuration.map-underscore-to-camel-case=true
-
 #반환타입
 mybatis.type-aliases-package=hello.board.domain
-
 # Mybatis 에서 실행하는 쿼리 로그 확인
-logging.level.hello.board.repository.mybatis=trace
+#logging.level.hello.board.repository.mybatis=trace
 
-# amazon s3 연결
+# log4jdbc 설정
+#log4jdbc.dump.sql.maxlinelength=0
+
+
+
+
+
 
 
 
