--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@
 #spring.profiles.active=local
 
 # 로컬 + S3
-#spring.profiles.active=localS3
+spring.profiles.active=localS3
 
 # EB 배포
-spring.profiles.active=deployS3
+#spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
 spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
-spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local
+spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
 spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
 
 #spring.mvc.static-path-pattern=/static/**
@@ -20,6 +20,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 # errors.properties 기본사용
 spring.messages.basename=errors
+
+server.error.whitelabel.enabled=false
 
 # multipart 파일전송 용량제한, 배포도 사용
 spring.servlet.multipart.max-file-size=10MB
