commit feature/verify-email 2.1

--- a/build.gradle
+++ b/build.gradle
@@ -100,5 +100,5 @@ task buildAwsEb(type: Zip) {
 	destinationDir file('build/libs')
 }
 
-build.dependsOn bootJar
-build.dependsOn buildAwsEb
+//build.dependsOn bootJar
+//build.dependsOn buildAwsEb
