--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@
 #spring.profiles.active=local
 
 # 로컬 + S3
-spring.profiles.active=localS3
+#spring.profiles.active=localS3
 
 # EB 배포
-#spring.profiles.active=deployS3
+spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
 spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
 spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
-spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
+spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb, mail
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
