--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -15,7 +15,7 @@ spring.profiles.active=localS3
 # 스프링 프로필 그룹
 spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
 spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
-spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb
+spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb, mail
 
 
 #spring.mvc.static-path-pattern=/static/**
