--- a/.ebextensions/03-log-streaming.config
+++ b/.ebextensions/03-log-streaming.config
@@ -11,8 +11,8 @@ commands:
 #  03-clean:
 #    command: "sudo rm /etc/awslogs/config/*.conf"
 #  /etc/awslogs/config/logs.conf.bak 자동생성되는거 삭제.
-  03-clean-backup:
-    command: "sudo rm /etc/awslogs/config/*.bak"
+#  03-clean-backup:
+#    command: "sudo rm /etc/awslogs/config/*.bak"
   awslog-activation:
     command: systemctl enable awslogsd.service
   awslog-restart:
