--- a/.ebextensions/03-log-streaming.config
+++ b/.ebextensions/03-log-streaming.config
@@ -1,22 +1,6 @@
-# ref) https://github.com/awsdocs/elastic-beanstalk-samples/blob/master/configuration-files/aws-provided/instance-configuration/logs-streamtocloudwatch-linux.config
 packages:
   yum:
-    awslogs: []
-
-commands:
-  01-directory:
-    command: "sudo mkdir -p /var/log/board/"
-  02-directory:
-    command: "sudo chmod 777 /var/log/board/"
-#  03-clean:
-#    command: "sudo rm /etc/awslogs/config/*.conf"
-#  /etc/awslogs/config/logs.conf.bak 자동생성되는거 삭제.
-#  03-clean-backup:
-#    command: "sudo rm /etc/awslogs/config/*.bak"
-  awslog-activation:
-    command: systemctl enable awslogsd.service
-  awslog-restart:
-    command: systemctl restart awslogsd
+    amazon-cloudwatch-agent: []
 
 files:
   "/etc/awslogs/awscli.conf" :
@@ -29,41 +13,47 @@ files:
       [default]
       region = `{"Ref":"AWS::Region"}`
 
-  "/etc/awslogs/awslogs.conf" :
+# cloudwatch 커스텀 설정파일 작성
+  "/opt/aws/amazon-cloudwatch-agent/etc/custom_logs.json":
     mode: "000600"
     owner: root
     group: root
     content: |
-      [general]
-      state_file = /var/lib/awslogs/agent-state
+      {
+        "logs": {
+          "logs_collected": {
+            "files": {
+              "collect_list": [
+                {
+                  "file_path": "/var/log/board/syslog.log",
+                  "log_group_name": "`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/syslog.log"]]}`",
+                  "log_stream_name": "{instance_id}"
+                },
+                {
+                  "file_path": "/var/log/board/applog.log",
+                  "log_group_name": "`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/applog.log"]]}`",
+                  "log_stream_name": "{instance_id}"
+                },
+                {
+                  "file_path": "/var/log/board/errlog.log",
+                  "log_group_name": "`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/errlog.log"]]}`",
+                  "log_stream_name": "{instance_id}"
+                }
+              ]
+            }
+          }
+        }
+      }
 
-  "/etc/awslogs/config/logs.conf" :
-    mode: "000600"
-    owner: root
-    group: root
-    content: |
-      [syslog.log]
-      log_group_name = `{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/syslog.log"]]}`
-      log_stream_name = `{"Fn::Join":["/", [{ "Ref":"AWSEBEnvironmentName" }, "{instance_id}"]]}`
-      file = /var/log/board/syslog.log
-
-      [applog.log]
-      log_group_name = `{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/applog.log"]]}`
-      log_stream_name = `{"Fn::Join":["/", [{ "Ref":"AWSEBEnvironmentName" }, "{instance_id}"]]}`
-      file = /var/log/board/applog.log
-
-      [errlog.log]
-      log_group_name = `{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/log/board/errlog.log"]]}`
-      log_stream_name = `{"Fn::Join":["/", [{ "Ref":"AWSEBEnvironmentName" }, "{instance_id}"]]}`
-      file = /var/log/board/errlog.log
-
+# 번들로그에 커스텀로그 추가
   "/opt/elasticbeanstalk/tasks/bundlelogs.d/boardapplog.conf" :
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      /var/log/board/*.log
+      mode: "000755"
+      owner: root
+      group: root
+      content: |
+        /var/log/board/*.log
 
+# EB taillog 에 커스텀로그 추가
   "/opt/elasticbeanstalk/tasks/taillogs.d/boardapplog.conf" :
     mode: "000755"
     owner: root
@@ -73,3 +63,8 @@ files:
       /var/log/board/syslog.log
       /var/log/board/errlog.log
 
+container_commands:
+  "01":
+    command: amazon-cloudwatch-agent-ctl -a append-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/etc/custom_logs.json -s
+  "02":
+    command: sudo systemctl restart amazon-cloudwatch-agent
