--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@
 #spring.profiles.active=local
 
 # 로컬 + S3
-#spring.profiles.active=localS3
+spring.profiles.active=localS3
 
 # EB 배포
-spring.profiles.active=deployS3
+#spring.profiles.active=deployS3
 
 # 스프링 프로필 그룹
-spring.profiles.group.local=local, oauth-local, amazon-s3, log-local
+spring.profiles.group.local=local, oauth-local, amazon-s3, log-local, mail
 spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
 spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb, mail
 
@@ -27,17 +27,11 @@ server.error.whitelabel.enabled=false
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
-# mybatis 설정
-
-# snake case to camel case 변환
-mybatis.configuration.map-underscore-to-camel-case=true
-#반환타입
-mybatis.type-aliases-package=hello.board.domain
-# Mybatis 에서 실행하는 쿼리 로그 확인
-#logging.level.hello.board.repository.mybatis=trace
-
 # log4jdbc 설정
 #log4jdbc.dump.sql.maxlinelength=0
+
+# ddl 옵션 명시
+spring.jpa.hibernate.ddl-auto=none
 
 
 
