--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 
-#스프링 프로필
+#테스트 스프링 프로필
 
 # 로컬 + 로컬디스크
 #spring.profiles.active=local
@@ -29,17 +29,11 @@ spring.messages.basename=errors
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
-# mybatis 설정
-
-# snake case to camel case 변환
-mybatis.configuration.map-underscore-to-camel-case=true
-#반환타입
-mybatis.type-aliases-package=hello.board.domain
-# Mybatis 에서 실행하는 쿼리 로그 확인
-#logging.level.hello.board.repository.mybatis=trace
-
 # log4jdbc 설정
 #log4jdbc.dump.sql.maxlinelength=0
+
+# ddl-auto 명시
+spring.jpa.hibernate.ddl-auto=none
 
 
 
