--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 
-#스프링 프로필
+# 로컬환경 + 로컬디스크사용
+spring.profiles.group.localDisk=settings, oauth-id, oauth-redirect, log, mail
+# 로컬환경 + S3 사용
+spring.profiles.group.local=settings, oauth-id, oauth-redirect, amazon-s3, log, mail
+# 배포
+spring.profiles.group.prod=settings, oauth-id, oauth-redirect, amazon-s3, log, mail
 
-# 로컬 + 로컬디스크
-#spring.profiles.active=local
 
-# 로컬 + S3
-spring.profiles.active=localS3
-
-# EB 배포
-#spring.profiles.active=deployS3
-
-# 스프링 프로필 그룹
-spring.profiles.group.local=local, oauth-local, amazon-s3, log-local, mail
-spring.profiles.group.localS3=local, oauth-local, amazon-s3, log-local, mail
-spring.profiles.group.deployS3=amazon-eb, oauth-eb, amazon-s3, log-eb, mail
 
 #spring.mvc.static-path-pattern=/static/**
 spring.thymeleaf.prefix=classpath:/templates/
@@ -26,9 +19,6 @@ server.error.whitelabel.enabled=false
 # multipart 파일전송 용량제한, 배포도 사용
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
-
-# log4jdbc 설정
-#log4jdbc.dump.sql.maxlinelength=0
 
 # ddl 옵션 명시
 spring.jpa.hibernate.ddl-auto=none
