--- a/.ebextensions/03-log-streaming.config
+++ b/.ebextensions/03-log-streaming.config
@@ -64,6 +64,10 @@ files:
       /var/log/board/errlog.log
 
 container_commands:
+  "00":
+    command: "sudo mkdir -p /var/log/board/"
+  "000":
+    command: "sudo chmod 777 /var/log/board/"
   "01":
     command: amazon-cloudwatch-agent-ctl -a append-config -m ec2 -c file:/opt/aws/amazon-cloudwatch-agent/etc/custom_logs.json -s
   "02":
